Fix feature-card on mobile

--- a/src/app/component/card/feature-card/feature-card.component.scss
+++ b/src/app/component/card/feature-card/feature-card.component.scss
@@ -1,6 +1,8 @@
 @use '../../../../styles/util/util';
 
 .feature-card {
+  font-size: 18px;
+
   & .header {
     text-align: left;
     padding: 1em 1em 0.1em;
@@ -13,7 +15,6 @@
       @include util.default-border-radius;
 
       color: var(--lighter);
-      font-size: 18px;
       font-weight: 600;
       margin-top: 15px;
       border-left: 2px solid var(--theme-color);
@@ -25,13 +26,12 @@
   & .body {
     text-align: left;
     padding: 1em 1em 0.1em;
-    min-height: 420px;
+    height: 400px;
 
     & p {
       color: var(--lighter);
-      font-size: 18px;
       font-weight: 300;
-      padding-bottom: 30px;
+      padding-bottom: 5px;
       text-align: center;
     }
   }
